--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
     padding: 0;
+    background-color:aqua;
 }
 
 .layout{
@@ -20,6 +21,7 @@ header,footer{
     background-color: #4b126c;
     padding: 1rem;
     text-align: center;
+    color: azure;
 }
 
 nav{
@@ -81,7 +83,9 @@ main{
     padding: 1rem;
     width: 25%;
     text-align: center;
-    border: 1px solid #ccc;
+    border: 1px solid #c00808;
+    color: #000;
+    background-color: #17a89c;
     height: auto;
 }
 
@@ -96,6 +100,7 @@ button{
     margin-top: 10px;
     padding: 0.5rem 1rem;
     cursor: pointer;
+    background-color: aquamarine;
 }
 
 .mensaje-carrito{
